Changed login.html and main.css for upgraded login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -17,5 +17,28 @@
 </form>
 <h1 >{{info}}</h1>
 
+
+
+  <div class="wrapper">
+    <div class="container">
+      
+      <div class="signup">Sign Up</div>
+      <div class="login">Log In</div>
+      
+       <div class="signup-form">
+          <input type="text" name ='username' placeholder="Your Email Address" class="input"><br />
+          <input type="password" name='password' placeholder="Choose a Password" class="input"><br />
+          <div class="btn">Create account</div>
+       </div>
+      
+      <div class="login-form">
+          <input type="text" name ='username' placeholder="Email" class="input"><br />
+          <input type="password" name='password' placeholder="Password" class="input"><br />
+          <div class="btn">log in</div>
+       </div>
+      
+    </div>
+  </div>
+
 </body>
 </html>
