--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-
-<body bgcolor = "teal">
-<br>
-<h1 align="center">Welcome {{name}} !</h1>
-
+  <html>
+    <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+    <link href="../static/main.css" type="text/css" rel="stylesheet"/>
+    </head>
+    <body>
+    <div id="wrapper">
+    
+    <div class="form_div">
+    <p class="form_label">CREATE PROJECT</p>
+    <form method="post" action="/form_createproject">
+    <p><input type="text" placeholder="Enter Project ID"></p>
+    <p><input type="text" placeholder="Enter Project Description"></p>
+    <p><input type="submit" value="CREATE"></p>
+    </form>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="form_div">
+    <p class="form_label">SIGN INTO PROJECT</p>
+    <form method="post" action="/form_signintoproject">
+    <p><input type="text" placeholder="Enter Project ID"></p>
+    <p><input type="submit" value="SIGN INTO"></p>
+    </form>
+    </div>
+    
+</div>
 </body>
 </html>
