--- a/templates/inproject.html
+++ b/templates/inproject.html
@@ -29,5 +29,7 @@
     </form>
     </div>
     <A HREF="downloads.html">Download Runnable DataSets</A>
+    <A HREF="login.html">Logout</A>
+    <A HREF="home.html">Switch Project</A>
 </body>
 </html>
