--- a/templates/downloads.html
+++ b/templates/downloads.html
@@ -56,9 +56,9 @@
     <p>
         This database includes beat annotation files for 29 long-term ECG recordings of subjects aged 34 to 79, with congestive heart failure (NYHA classes I, II, and III).
     </p>
-
-
-
+      <A HREF="login.html">Logout</A>
+      <A HREF="home.html">Switch Project</A>
+      <A HREF="inproject.html">Return</A>
 </div>
 </body>
 </html>
