--- a/templates/login.html
+++ b/templates/login.html
@@ -9,9 +9,13 @@
     
     <div class="form_div">
     <p class="form_label">LOGIN FORM</p>
+
+    {% if info %}
+    <p style="color:red">{{ info }}!</p>
+    {% endif %}
     <form method="post" action="/form_login">
-    <p><input type="text" placeholder="Enter Username"></p>
-    <p><input type="password" placeholder="**********"></p>
+    <p><input type="text" name='username' placeholder="Enter Username"></p>
+    <p><input type="password" name='password' placeholder="**********"></p>
     <p><input type="submit" value="LOGIN"></p>
     </form>
     </div>
@@ -21,12 +25,14 @@
     <div class="form_div">
     <p class="form_label">SIGNUP FORM</p>
     <form method="post" action="/form_signup">
-    <p><input type="text" placeholder="Enter UserName"></p>
-    <p><input type="password" placeholder="**********"></p>
+    <p><input type="text"  name='username' placeholder="Enter UserName"></p>
+    <p><input type="password" name='password'  placeholder="**********"></p>
     <p><input type="submit" value="SIGNUP"></p>
+
     </form>
     </div>
     
 </div>
 </body>
+</html>
 </html>
