logout, downloads, and ints

--- a/templates/home.html
+++ b/templates/home.html
@@ -33,7 +33,11 @@
     </form>
     </div>
 
-    <A HREF="/login.html" class="external">Logout</A>
+    
+    <!-- can try either of the options below, first uses app route, second checks parent folder -->
+    <A HREF=".." class="external">Logout</A>
+
+
     
 </div>
 </body>
