--- a/templates/login.html
+++ b/templates/login.html
@@ -24,8 +24,11 @@
     <br>
     <div class="form_div">
     <p class="form_label">SIGNUP FORM</p>
+    {% if info2 %}
+    <p style="color:red">{{ info2 }}!</p>
+    {% endif %}
     <form method="post" action="/form_signup">
-    <p><input type="text"  name='username' placeholder="Enter UserName"></p>
+    <p><input type="text"  name='username' placeholder="Enter Username"></p>
     <p><input type="password" name='password'  placeholder="**********"></p>
     <p><input type="submit" value="SIGNUP"></p>
 
@@ -34,5 +37,4 @@
     
 </div>
 </body>
-</html>
 </html>
