--- a/templates/downloads.html
+++ b/templates/downloads.html
@@ -56,9 +56,12 @@
     <p>
         This database includes beat annotation files for 29 long-term ECG recordings of subjects aged 34 to 79, with congestive heart failure (NYHA classes I, II, and III).
     </p>
+    <A HREF=".." class="external" >Logout</A>
+    <br>
     <A HREF="../switch" class="external">Switch Project</A>
     <br>
     <A HREF="/return1" class="external">Return</A>
+
 </div>
 </body>
 </html>
