--- a/templates/login.html
+++ b/templates/login.html
@@ -3,9 +3,99 @@
     <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <link href="../static/main.css" type="text/css" rel="stylesheet"/>
+    <style>
+    body {font-family: Arial, Helvetica, sans-serif;}
+    form {border: 3px solid #f1f1f1;}
+
+    input[type=text], input[type=password] {
+      width: 50%;
+      padding: 12px 20px;
+      margin: 8px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+
+    button {
+      background-color: #4CAF50;
+      color: white;
+      padding: 14px 20px;
+      margin: 8px 0;
+      border: none;
+      cursor: pointer;
+      width: 56%;
+    }
+
+    button:hover {
+      opacity: 0.8;
+    }
+
+    .container {
+      margin-left: auto;
+      margin-right: auto;
+      padding: 15px;
+    }
+
+    span.psw {
+      float: right;
+      padding-top: 16px;
+    }
+
+    /* Change styles for span and cancel button on extra small screens */
+    @media screen and (max-width: 300px) {
+      span.psw {
+        display: block;
+        float: none;
+      }
+      .cancelbtn {
+        width: 100%;
+      }
+    }
+
+    </style>
     </head>
     <body>
-    <div id="wrapper">
+      <h2>Login Form</h2>
+      {% if info %}
+      <h2 style="color:red">{{ info }}!</h2>
+      {% endif %}
+    <form action="/form_login" method="post">
+
+  <div class="container">
+    <label for="uname"><b>Username </b></label>
+    <input type="text" placeholder="Enter Username" name="username" required>
+    <br>
+    <label for="psw"><b>Password </b></label>
+    <input type="password" placeholder="********" name="password" required>
+        
+    <button type="submit" calue='LOGIN'>Login</button>
+  </div>
+    </form>
+
+    <h2>SIGNUP FORM</h2>
+    {% if info2 %}
+    <h2 style="color:red">{{ info2 }}!</h2>
+    {% endif %}
+  <form action="/form_signup" method="post">
+
+<div class="container">
+  <label for="uname"><b>Username </b></label>
+  <input type="text" placeholder="Enter Username" name="username" required>
+  <br>
+  <label for="psw"><b>Password </b></label>
+  <input type="password" placeholder="********" name="password" required>
+      
+  <button type="submit" calue='SIGNUP'>Sign Up</button>
+</div>
+  </form>
+
+  <div class="container" style="background-color:#f1f1f1">
+  </div>
+</form>
+
+
+      
+    <!-- <div id="wrapper">
     
     <div class="form_div">
     <p class="form_label">LOGIN FORM</p>
@@ -35,6 +125,6 @@
     </form>
     </div>
     
-</div>
+</div> -->
 </body>
 </html>
