home page css, minor logincss fixes

--- a/templates/login.html
+++ b/templates/login.html
@@ -68,11 +68,11 @@
     <label for="psw"><b>Password </b></label>
     <input type="password" placeholder="********" name="password" required>
         
-    <button type="submit" calue='LOGIN'>Login</button>
+    <button type="submit" value='LOGIN'>Login</button>
   </div>
     </form>
 
-    <h2>SIGNUP FORM</h2>
+    <h2>Signup Form</h2>
     {% if info2 %}
     <h2 style="color:red">{{ info2 }}!</h2>
     {% endif %}
@@ -85,7 +85,7 @@
   <label for="psw"><b>Password </b></label>
   <input type="password" placeholder="********" name="password" required>
       
-  <button type="submit" calue='SIGNUP'>Sign Up</button>
+  <button type="submit" value='SIGNUP'>Sign Up</button>
 </div>
   </form>
 
