--- a/templates/downloads.html
+++ b/templates/downloads.html
@@ -3,8 +3,42 @@
     <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <link href="../static/main.css" type="text/css" rel="stylesheet"/>
+    <style>
+              ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+      }
+      
+      li {
+        float: left;
+      }
+      
+      li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+      
+      li a:hover:not(.active) {
+        background-color: #111;
+      }
+      
+      .active {
+        background-color: #4CAF50;
+      }
+    </style>
     </head>
     <body>
+        <ul>
+            <li style="float:right"><A class="active" HREF=".." class="external" >Logout</A></li>
+            <li style="float:right"><A HREF="../switch" class="external">Switch Project</A></li>
+            <li style="float:right"><A HREF="../return1" class="external">Return</A></li>
+        </ul>
     <div id="wrapper">
     
     <h1 align="center">
@@ -56,11 +90,7 @@
     <p>
         This database includes beat annotation files for 29 long-term ECG recordings of subjects aged 34 to 79, with congestive heart failure (NYHA classes I, II, and III).
     </p>
-    <A HREF=".." class="external" >Logout</A>
-    <br>
-    <A HREF="../switch" class="external">Switch Project</A>
-    <br>
-    <A HREF="/return1" class="external">Return</A>
+    
 
 </div>
 </body>
