--- a/templates/home.html
+++ b/templates/home.html
@@ -33,6 +33,54 @@
       .active {
         background-color: #4CAF50;
       }
+
+      body {font-family: Arial, Helvetica, sans-serif;}
+    form {border: 3px solid #f1f1f1;}
+
+    input[type=text], input[type=password] {
+      width: 50%;
+      padding: 12px 20px;
+      margin: 8px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+
+    button {
+      background-color: #4CAF50;
+      color: white;
+      padding: 14px 20px;
+      margin: 8px 0;
+      border: none;
+      cursor: pointer;
+      width: 56%;
+    }
+
+    button:hover {
+      opacity: 0.8;
+    }
+
+    .container {
+      margin-left: auto;
+      margin-right: auto;
+      padding: 15px;
+    }
+
+    span.psw {
+      float: right;
+      padding-top: 16px;
+    }
+
+    /* Change styles for span and cancel button on extra small screens */
+    @media screen and (max-width: 300px) {
+      span.psw {
+        display: block;
+        float: none;
+      }
+      .cancelbtn {
+        width: 100%;
+      }
+    }
     </style>
     </head>
     <body>
@@ -40,7 +88,53 @@
         <li style="float:right"><A class="active" HREF=".." class="external" >Logout</A></li>
         <li style="float:right"><A HREF="../download" class="external">Download Runnable DataSets</A></li>
     </ul>
-    <div id="wrapper">
+
+    <div class="form_div">
+    {% if name %}
+    <h2 style="color:blue">Current User: {{ name }}</h2>
+    {% endif %}
+    <h2 class="form_label">CREATE PROJECT</h2>
+    {% if info %}
+    <h2 style="color:red">{{ info }}!</h2>
+    {% endif %}
+    
+
+    <form action="/form_createproject" method="post">
+
+  <div class="container">
+    <label for="projectName"><b>Project Name</b></label>
+    <input type="text" placeholder="Enter projectName" name="projectName" required>
+    <br>
+    <label for="projectID"><b>Project ID</b></label>
+    <input type="text" placeholder="Enter Project Id" name="projectID" required>
+    <br>
+    <label for="Description"><b>Description</b></label>
+    <input type="text" placeholder="Enter Description" name="description">
+    <button type="submit" value='CREATE'>CREATE</button>
+  </div>
+    </form>
+
+    <h2>Sign Into Project</h2>
+    {% if info2 %}
+    <h2 style="color:red">{{ info2 }}!</h2>
+    {% endif %}
+  <form action="/form_signintoproject" method="post">
+
+<div class="container">
+  <label for="projectID"><b>Project ID</b></label>
+  <input type="text" placeholder="Enter Project ID" name="projectID" required>
+  
+  <button type="submit" value='SIGN INTO'>Sign Into</button>
+</div>
+  </form>
+
+  <div class="container" style="background-color:#f1f1f1">
+  </div>
+</form>
+
+
+
+    <!-- <div id="wrapper">
     <div class="form_div">
     {% if name %}
     <p style="color:blue">Current User: {{ name }}</p>
@@ -68,9 +162,8 @@
     <p><input type="text" name='projectID' placeholder="Enter Project ID"></p>
     <p><input type="submit" value="SIGN INTO"></p>
     </form>
-    </div>
+    </div> -->
 
-    <A HREF=".." class="external">Logout</A>
     
 </div>
 </body>
