--- a/templates/home.html
+++ b/templates/home.html
@@ -93,7 +93,7 @@
     {% if name %}
     <h2 style="color:blue">Current User: {{ name }}</h2>
     {% endif %}
-    <h2 class="form_label">CREATE PROJECT</h2>
+    <h2 class="form_label">Create Project</h2>
     {% if info %}
     <h2 style="color:red">{{ info }}!</h2>
     {% endif %}
@@ -110,7 +110,7 @@
     <br>
     <label for="Description"><b>Description</b></label>
     <input type="text" placeholder="Enter Description" name="description">
-    <button type="submit" value='CREATE'>CREATE</button>
+    <button type="submit" value='CREATE'>Create</button>
   </div>
     </form>
 
