--- a/templates/inproject.html
+++ b/templates/inproject.html
@@ -53,10 +53,10 @@
         </ul>
     <h1 class="form_label">HW SET FORM</h1>
     {% if hwset1 %}
-    <h2 style="color:blue">Availibility of HWSet1: {{ hwset1 }}</h2>
+    <h2 style="color:blue">Availability of HWSet1: {{ hwset1 }}</h2>
     {% endif %}
     {% if hwset2 %}
-    <h2 style="color:blue">Availibility of HWSet2: {{ hwset2 }}</h2>
+    <h2 style="color:blue">Availability of HWSet2: {{ hwset2 }}</h2>
     {% endif %}
     {% if info %}
     <h2 style="color:red">{{ info }}!</h2>
