--- a/templates/inproject.html
+++ b/templates/inproject.html
@@ -66,13 +66,17 @@
     {% endif %}
     {% if name %}
         <h2 style="color:green">Project Name: {{ name }}!</h2>
-     {% endif %}
-    
-    
+    {% endif %}
+    {% if checkedSet1 %}
+    <h2 style="color:green">Number of HWSet1 Checked Out: {{ checkedSet1 }}</h2>
+    {% endif %}
+    {% if checkedSet2 %}
+    <h2 style="color:green">Number of HWSet2 Checked Out: {{ checkedSet2 }}</h2>
+    {% endif %}
     
     
     <div class="form_div sideBySideForm">
-    <p class="form_label">Checkout Hardware Sets</p>
+    <p class="form_label"><u>Checkout Hardware Sets</u></p>
     <form method="post" action="/form_checkout1">
     <p><input type="text" name="set1amount" placeholder="Enter Amount for Set1"></p>
     {% if id %}
@@ -96,7 +100,7 @@
 
 
     <div class="form_div sideBySideForm">
-        <p class="form_label">Checkin Hardware Sets</p>
+        <p class="form_label"><u>Checkin Hardware Sets</u></p>
         {% if info2 %}
         <p style="color:red">{{ info2 }}!</p>
         {% endif %}
