--- a/templates/downloads.html
+++ b/templates/downloads.html
@@ -39,7 +39,7 @@
             <li style="float:right"><A HREF="../switch" class="external">Switch Project</A></li>
             <li style="float:right"><A HREF="../return1" class="external">Return</A></li>
         </ul>
-    <div id="wrapper">
+    <div id="wrapper", style="text-align:center">
     
     <h1 align="center">
         Download and Test with DataSets from Physionet!
