--- a/templates/home.html
+++ b/templates/home.html
@@ -37,6 +37,9 @@
       body {font-family: Arial, Helvetica, sans-serif;}
     form {border: 3px solid #f1f1f1;}
 
+    h2 {text-align: center;}
+    div {text-align: center;}
+
     input[type=text], input[type=password] {
       width: 50%;
       padding: 12px 20px;
@@ -91,11 +94,11 @@
 
     <div class="form_div">
     {% if name %}
-    <h2 style="color:blue">Current User: {{ name }}</h2>
+    <h2 style="color:blue"><i>Current User: {{ name }}</i></h2>
     {% endif %}
     <h2 class="form_label">Create Project</h2>
     {% if info %}
-    <h2 style="color:red">{{ info }}!</h2>
+    <h2 style="color:red; font-size:15px;"><i>{{ info }}!</i></h2>
     {% endif %}
     
 
@@ -116,7 +119,7 @@
 
     <h2>Sign Into Project</h2>
     {% if info2 %}
-    <h2 style="color:red">{{ info2 }}!</h2>
+    <h2 style="color:red; font-size:15px;"><i>{{ info2 }}!</i></h2>
     {% endif %}
   <form action="/form_signintoproject" method="post">
 
