--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,9 @@
     body {font-family: Arial, Helvetica, sans-serif;}
     form {border: 3px solid #f1f1f1;}
 
+    h2 {text-align: center;}
+    div {text-align: center;}
+
     input[type=text], input[type=password] {
       width: 50%;
       padding: 12px 20px;
@@ -54,10 +57,11 @@
 
     </style>
     </head>
+
     <body>
-      <h2>Login Form</h2>
+      <h2><b>Login Form</b></h2>
       {% if info %}
-      <h2 style="color:red">{{ info }}!</h2>
+      <h2 style="color:red; font-size:15px;"><i>{{ info }}!</i></h2>
       {% endif %}
     <form action="/form_login" method="post">
 
@@ -72,9 +76,9 @@
   </div>
     </form>
 
-    <h2>Signup Form</h2>
+    <h2><b>Signup Form</b></h2>
     {% if info2 %}
-    <h2 style="color:red">{{ info2 }}!</h2>
+    <h2 style="color:red; font-size:15px;"><i>{{ info2 }}!</i></h2>
     {% endif %}
   <form action="/form_signup" method="post">
 
@@ -89,8 +93,7 @@
 </div>
   </form>
 
-  <div class="container" style="background-color:#f1f1f1">
-  </div>
+ 
 </form>
 
 </body>
