login and home prettier

--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
         background-color: #4CAF50;
       }
 
-      body {font-family: Arial, Helvetica, sans-serif;}
+      body {font-family: Arial, Helvetica, sans-serif; background-color: lightblue; margin-left: 500px; margin-right: 500px;}
     form {border: 3px solid #f1f1f1;}
 
     h2 {text-align: center;}
@@ -67,6 +67,8 @@
       margin-left: auto;
       margin-right: auto;
       padding: 15px;
+      background-color: white;
+
     }
 
     span.psw {
@@ -86,11 +88,11 @@
     }
     </style>
     </head>
-    <body>
       <ul>
         <li style="float:right"><A class="active" HREF=".." class="external" >Logout</A></li>
         <li style="float:right"><A HREF="../download" class="external">Download Runnable DataSets</A></li>
     </ul>
+    <body>
 
     <div class="form_div">
     {% if name %}
