--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <link href="../static/main.css" type="text/css" rel="stylesheet"/>
     <style>
-    body {font-family: Arial, Helvetica, sans-serif;}
+    body {font-family: Arial, Helvetica, sans-serif; background-color: lightblue; margin-left: 500px; margin-right: 500px;}
     form {border: 3px solid #f1f1f1;}
 
     h2 {text-align: center;}
@@ -37,6 +37,7 @@
       margin-left: auto;
       margin-right: auto;
       padding: 15px;
+      background-color: white;
     }
 
     span.psw {
