--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
+
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <link href="../static/main.css" type="text/css" rel="stylesheet"/>
     
@@ -34,8 +35,8 @@
         background-color: #4CAF50;
       }
 
-      body {font-family: Arial, Helvetica, sans-serif; background-color: lightblue; margin-left: 500px; margin-right: 500px;}
-    form {border: 3px solid #f1f1f1;}
+      body {font-family: Arial, Helvetica, sans-serif; background-color: lightblue;}
+    form {border: 3px solid lightblue;}
 
     h2 {text-align: center;}
     div {text-align: center;}
@@ -64,8 +65,8 @@
     }
 
     .container {
-      margin-left: auto;
-      margin-right: auto;
+      margin-left: 500px;
+      margin-right: 500px;
       padding: 15px;
       background-color: white;
 
@@ -87,13 +88,14 @@
       }
     }
     </style>
-    </head>
+
+  </head>
+
+    <body>
       <ul>
         <li style="float:right"><A class="active" HREF=".." class="external" >Logout</A></li>
         <li style="float:right"><A HREF="../download" class="external">Download Runnable DataSets</A></li>
     </ul>
-    <body>
-
     <div class="form_div">
     {% if name %}
     <h2 style="color:blue"><i>Current User: {{ name }}</i></h2>
@@ -133,8 +135,6 @@
 </div>
   </form>
 
-  <div class="container" style="background-color:#f1f1f1">
-  </div>
 </form>    
 </div>
 </body>
