--- a/templates/downloads.html
+++ b/templates/downloads.html
@@ -16,6 +16,8 @@
         float: left;
       }
       
+      body {font-family: Arial, Helvetica, sans-serif; background-color: lightblue;}
+
       li a {
         display: block;
         color: white;
@@ -42,7 +44,7 @@
     <div id="wrapper", style="text-align:center">
     
     <h1 align="center">
-        Download and Test with DataSets from Physionet!
+        <u>Download and Test with DataSets from Physionet!</u>
     </h1>
     <A HREF="https://www.physionet.org/static/published-projects/adfecgdb/abdominal-and-direct-fetal-ecg-database-1.0.0.zip">Abdominal and Direct Fetal ECG Database: </A>
         <p>
