--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <link href="../static/main.css" type="text/css" rel="stylesheet"/>
     <style>
     body {font-family: Arial, Helvetica, sans-serif; background-color: lightblue; margin-left: 500px; margin-right: 500px;}
-    form {border: 3px solid #f1f1f1;}
+    form {border: 3px solid #4CAF50;}
 
     h2 {text-align: center;}
     div {text-align: center;}
